--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -95,6 +95,8 @@ jobs:
     needs: [build-windows, build-linux]
     runs-on: ubuntu-latest
     if: startsWith(github.ref, 'refs/tags/')
+    permissions:
+      contents: write
     
     steps:
       - name: Checkout code
