--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -20,11 +20,10 @@ jobs:
           python-version: '3.11'
       
       - name: Install Python dependencies
-        working-directory: backend
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install Pillow pyinstaller
+          pip install -e .[windows]
+          pip install Pillow
       
       - name: Install Inno Setup
         run: |
@@ -65,15 +64,12 @@ jobs:
           sudo gem install fpm
       
       - name: Install Python dependencies
-        working-directory: backend
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install pyinstaller
+          pip install -e .[linux]
       
       - name: Make scripts executable
         run: |
-          chmod +x backend/build.sh
           chmod +x backend/packaging/linux/build_deb.sh
           chmod +x backend/packaging/linux/postinstall.sh
           chmod +x backend/packaging/linux/postremove.sh
