feat: Implement window control features in the GUI, including minimize, maximize, restore, and close functionalities; add window resizing and snapping capabilities; enhance frontend with VSCode-style window controls and resize handles; update pyproject.toml for Windows dependencies.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,9 @@ dependencies = [
 ]
 
 [project.optional-dependencies]
-windows = []  # Windows uses native Edge WebView2, no additional dependencies needed
+windows = [
+    "pywinstyles",  # For native Windows Mica/Acrylic glass effect
+]
 linux = [
     "pywebview[qt]",
     "PyQt6",
