chore: update .gitignore to exclude WebView2 Runtime Installer executable; remove the installer binary from the repository

--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,6 @@ ENV/
 # OS
 Thumbs.db
 
+# WebView2 Runtime Installer (large binary, should not be in repo)
+**/MicrosoftEdgeWebView2RuntimeInstaller*.exe
+
