chore: update dependencies in pyproject.toml for compatibility with Python 3.10+; enhance README and BUILD documentation for Linux build compatibility; add troubleshooting section for GLIBC errors; implement Python version checks in build script

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,14 +4,14 @@ version = "0.2.0"
 description = "Serial terminal and device manager for Zephyr RTOS development"
 requires-python = ">=3.10"
 dependencies = [
-    "pywebview",
-    "fastapi",
-    "uvicorn[standard]",
-    "pyserial",
-    "pydantic",
-    "pydantic-settings",
-    "pyinstaller",
-    "psutil",
+    "pywebview>=4.0",  # Compatible with Python 3.10+
+    "fastapi>=0.100.0",  # Compatible with Python 3.10+
+    "uvicorn[standard]>=0.23.0",  # Compatible with Python 3.10+
+    "pyserial>=3.5",
+    "pydantic>=2.0.0",  # Pydantic v2 supports Python 3.10+
+    "pydantic-settings>=2.0.0",  # Compatible with Python 3.10+
+    "pyinstaller>=5.0",  # Compatible with Python 3.10+
+    "psutil>=5.9.0",
 ]
 
 [project.optional-dependencies]
@@ -19,9 +19,9 @@ windows = [
     "pywinstyles",  # For native Windows Mica/Acrylic glass effect
 ]
 linux = [
-    "pywebview[qt]",
-    "PyQt6",
-    "PyQt6-WebEngine",
+    "pywebview[qt]>=4.0",
+    "PyQt6>=6.4.0",  # Compatible with Python 3.10+
+    "PyQt6-WebEngine>=6.4.0",  # Compatible with Python 3.10+
 ]
 dev = [
     "pytest",
